Fix the bstrling link.

--- a/ex26.tex
+++ b/ex26.tex
@@ -123,7 +123,7 @@ a few more files as basic dependencies:
 
 \begin{enumerate}
 \item \file{dbg.h} from Exercise 20.
-\item \file{bstrlib.h} and \file{bstrlib.c} from \href{http://bstring.sourceforge.net/}. Download the .zip file, extract it, and copy just those two files out.
+\item \file{bstrlib.h} and \file{bstrlib.c} from \href{http://bstring.sourceforge.net/}{http://bstring.sourceforge.net/}. Download the .zip file, extract it, and copy just those two files out.
 \item Type \verb|make bstrlib.o| and if it doesn't work, read the "Fixing bstring" 
     instructions below.
 \end{enumerate}
