--- a/ex26.tex
+++ b/ex26.tex
@@ -198,11 +198,11 @@ in this form with my awesome code powers.  Instead, what I did is this:
 \end{enumerate}
 
 You're reading this in the order I want to teach it to you, but don't think
-this is how I always build software.  Sometimes I do know a lot about the
-subject I and I use more planning.  Sometimes I just hack up an idea and
-see how well it'd work.  Sometimes I write one, then throw it away and
-plan out a better one.  It all depends on what my experience tells me is
-best, or where my inspiration takes me.
+this is how I always build software.  Sometimes I already know the subject and
+I use more planning.  Sometimes I just hack up an idea and see how well it'd
+work.  Sometimes I write one, then throw it away and plan out a better one.  It
+all depends on what my experience tells me is best, or where my inspiration
+takes me.
 
 If you run into an "expert" who tries to tell you there's only one
 way to solve a programming problem, then they're lying to you.  Either
