Slight restructuring to match ex26 goals.

--- a/ex24.tex
+++ b/ex24.tex
@@ -1,9 +1,8 @@
-\chapter{Exercise 24: Input And Output}
+\chapter{Exercise 24: Input, Output, Files}
 
 You've been using \ident{printf} to print things, and that's great
 and all, but you need more.  In this exercise you'll learn about 
-getting input from the terminal and then we'll cover files in the
-next exercise.
+getting input from the terminal and then we'll cover files.
 
 
 \section{What You Should See}
