Better layout leading up to ex26.

--- a/ex22.tex
+++ b/ex22.tex
@@ -1,4 +1,4 @@
-\chapter{Exercise 22: Scope And The Stack}
+\chapter{Exercise 22: The Stack, Scope, And Globals}
 
 The concept of "scope" seems to confuse quite a few people when they first
 start programming.  Originally it came from the use of the system stack
