Finish my sentences.

--- a/ex23.tex
+++ b/ex23.tex
@@ -38,7 +38,7 @@ going on to yourself.
 \section{What You Should See}
 
 There's no output from this program, it just runs and exits.  You should
-run it under valgrind and 
+run it under valgrind and make sure there are no errors.
 
 \section{Solving The Puzzle}
 
