--- a/ex23.tex
+++ b/ex23.tex
@@ -71,7 +71,7 @@ Now, to solve how these functions work, do the following:
     located.
 \item Follow through this manual tracing, updating the variables, until
     you are sure you see how this flows.
-\end{enumeration}
+\end{enumerate}
 
 \section{Extra Credit}
 
