Wrong file name ex23.c

--- a/ex23.tex
+++ b/ex23.tex
@@ -15,7 +15,7 @@ strive for easy to read straight forward code.
 \end{aside}
 
 
-\begin{code}{db.h}
+\begin{code}{ex23.c}
 << d['code/ex23.c|pyg|l'] >>
 \end{code}
 
